# gnome-builder-python-plugins

./: .gitignore  README.md  check_python_dep  meson.build  meson_options.txt  python_helper
src/: backends.py  meson.build  python-setuptools-plugin.py  python-setuptools.plugin.in  python_517_build.plugin.in  python_517_build_plugin.py  stage.py
src/python-517-build/: backends.py  meson.build  python_517_build_plugin.py  stage.py
src/python-517-build-plugin/: backends.py  python_517_build_plugin.py  stage.py
src/python-isort/: isort_preferences.py  meson.build  org.gnome.builder.plugins.python-isort.gschema.xml  python_isort.gresource.xml  python_isort.plugin.in  python_isort_plugin.py
src/python-isort/gtk/: menus.ui
src/python-linter/: linters.py  linters_preferences.py  meson.build  org.gnome.builder.plugins.python-linter.gschema.xml  preferences.py  preferences_entry.py  preferences_entry.ui  python_linter.plugin.in  python_linter_plugin.py
src/python-symbols/: meson.build  org.gnome.builder.plugins.python-symbols.gschema.xml  parsers.py  python_symbols.plugin.in  python_symbols_plugin.py  sources_inspect.py  symbols_preferences.py
src/python-symbols/cyparso/: __init__.py  grammar.py
src/python-symbols/cyparso/cython/: grammar39.txt  parser.py  tokenize.py  tree.py
