option('flatpak',
	type : 'boolean',
	value : false,
	description : 'Install builder-plugins for a flatpak version'
)
option('plugins',
	type : 'array',
	choices : ['python-517-build', 'python-linter', 'python-isort'],
	value : ['python-517-build', 'python-linter', 'python-isort'],
	description : 'A comma separated list of plugins to install, default to all'
)
